--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,17 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p Welcome to Anushka's Server
+  button(type="button", class="btn btn-secondary", onclick="boost()") Sample
+  div(id="boost") Add in extra.
+ 
+  script.
+    let value = 0;
+    let amt = 3;
+   
+    function boost() {
+      amt += 1;
+      value += amt;
+      document.getElementById("boost").innerText = `Boosted ${value} by ${amt}.`;
+    }
+ 
