updated artifacts and link in index

--- a/views/artifacts.pug
+++ b/views/artifacts.pug
@@ -1,4 +1,22 @@
 extends layout
-
+ 
 block content
   h1= title
+ 
+  // Unbuffered code block to define results array
+  -
+    let results = [
+      { artifactName: "Terracotta Warrior", originYear: "210 BCE", culture: "Chinese" },
+      { artifactName: "Inca Sun Disk", originYear: "1400 CE", culture: "Incan" },
+      { artifactName: "Roman Gladiator Helmet", originYear: "100 CE", culture: "Roman" }
+    ];
+ 
+  // Container for Bootstrap grid
+  .container-fluid
+    .row
+      // Loop through each item in the results array
+      each artifact in results
+        .col-sm-2
+          h3 #{artifact.artifactName}
+          p Origin Year: #{artifact.originYear}
+          p Culture: #{artifact.culture}
