--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,8 @@ block content
   p Welcome to Anushka's Server
   button(type="button", class="btn btn-secondary", onclick="boost()") Sample
   div(id="boost") Add in extra.
- 
+  a(href="/artifacts") View Artifacts Search Results
+
   script.
     let value = 0;
     let amt = 3;
